--- a/calculator.html
+++ b/calculator.html
@@ -11,22 +11,28 @@ num.value = Math.pow(num.value, 3);
 function sine() {
 var num = document.getElementById("n1");
 num.value = Math.sin(num);
+}
 
 function cuarta() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 4);
+}
 
+function square() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, 2);
 }
 </script>
 </head>
 <body>
-<h1>Calculadora de Hugo y Pascual Adan</h1>
+<h1>Calculadora de Hugo Pascual Adan</h1>
 Number:
 <input type="text" id="n1">
 <p>
 <button onclick="cube()"> x^3 </button>
 <button onclick="sine()"> sin(x) </button>
 <button onclick="cuarta()"> x^4 </button>
+<button onclick="square()"> x^2 </button>
 </p>
 </body>
 </html>
