--- a/calculator.html
+++ b/calculator.html
@@ -22,6 +22,11 @@ function square() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 2);
 }
+
+function inverse() {
+var num = document.getElementById("n1");
+num.value = 1/num.value;
+}
 </script>
 </head>
 <body>
@@ -33,6 +38,7 @@ Number:
 <button onclick="sine()"> sin(x) </button>
 <button onclick="cuarta()"> x^4 </button>
 <button onclick="square()"> x^2 </button>
+<button onclick="inverse()"> 1/x </button>
 </p>
 </body>
 </html>
